--- a/animation.html
+++ b/animation.html
@@ -7,9 +7,30 @@
     <link rel="stylesheet" href="animation.css">
 </head>
 <body>
-<div class="box">
     <div class="box-ch"></div>
-</div>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+<h1>lorem epsum</h1>
+    
+
     
 </body>
 </html>
