--- a/slider.html
+++ b/slider.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="animationtask.css">
+    <link rel="stylesheet" href="slider.css">
 </head>
 <body>
-    <div class="box">
-        <button>Start here...!!</button>
-    </div>
+    <div class="slider"></div>
     
 </body>
 </html>
