--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
     <!-- ANGER TAG -->
     <button><a href="Home.html">HOME</a></button>
     <button><a href="About.html">ABOUT</a></button>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores culpa ipsa itaque! Praesentium libero non ea, veritatis dicta quidem iste explicabo magnam laudantium totam, consequatur obcaecati animi! Incidunt, quod nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet impedit praesentium ad eligendi quasi delectus fugit dolore! Iure dignissimos consequatur ipsam maxime, ut suscipit ullam corporis unde officiis quasi magni?</p>
     
 </body>
 </html>
