--- a/flex_responsive.html
+++ b/flex_responsive.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-    <div class="ch"></div>
+    <div class="ch">hello</div>
     <div class="ch"></div>
     <div class="ch"></div>
 </div>
