--- a/grid_res.html
+++ b/grid_res.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="con_grid">
-        <div class="ch1">1</div>
-        <div class="ch1">2</div>
+        <div class="ch1">hello mohit yadav</div>
+        <div class="ch1">welcome to bhopal</div>
         <div class="ch1">3</div>
         <div class="ch1">4</div>
     </div>
