--- a/JAVASCRIPT LANGUAGE/conditionalJs.html
+++ b/JAVASCRIPT LANGUAGE/conditionalJs.html
@@ -15,7 +15,12 @@
     Write a program to take user input choice of 1 it perform addition
     choice of 2 it perform subtraction
     choice of 3 it perform multiplication
-    choice of 4 it perform division
+    choice of 4 it perform division <br>
+
+    write a program to print the digit 25 to 5 <br>
+    write a program to take input from the user and check number is even or odd if number is even then print the table of that number and if number is odd print the cube of that number <br>
+
+    Write a programme to square of  all odd number between 1 to 15
 
 
 
