--- a/JAVASCRIPT LANGUAGE/conditionalJs.html
+++ b/JAVASCRIPT LANGUAGE/conditionalJs.html
@@ -20,7 +20,9 @@
     write a program to print the digit 25 to 5 <br>
     write a program to take input from the user and check number is even or odd if number is even then print the table of that number and if number is odd print the cube of that number <br>
 
-    Write a programme to square of  all odd number between 1 to 15
+    Write a programme to square of  all odd number between 1 to 15 <br>
+
+    
 
 
 
