--- a/JAVASCRIPT LANGUAGE/Dom.html
+++ b/JAVASCRIPT LANGUAGE/Dom.html
@@ -11,6 +11,11 @@
     <h2 class="content2">hello mohit</h2>
     <h2 class="content2">hello manish</h2>
     <h2 class="content2">hello Aman</h2>
+
+    <img id="picture" src="bedroom.jpg" height="100px">
+    <p>In which we change the bedroom.jpg with codechef.jpg with the help of src attribute</p>
+
+    <h3 class="date">Date() predefined function</h3>
     
     <script src="Dom.js"></script>
 </body>
