--- a/JAVASCRIPT LANGUAGE/DOM_EVENT.html
+++ b/JAVASCRIPT LANGUAGE/DOM_EVENT.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <!-- onclick Attribute -->
-     <h1 id="head" onclick="changeText(this)">Click on this text</h1>
+    <!-- <h1 id="head" onclick="changeText(this)">Click on this text</h1>
 
      <p class="demo">click the button to display the date</p>
-     <button onclick="displayDate()">The time is ?</button>
+     <button onclick="displayDate()">The time is ?</button> -->
+
+    <h1 id="head">Welcome to js class</h1>
+
+    <button onclick="fun()">On Click here</button>
+    <button ondblclick="fun()">Double click</button>
+    <button onmouseenter="fun()">Mouse enter</button>
+    <button onmouseleave="fun()">Leave Mouse</button>
+    <button oncontextmenu="fun()">Right click</button>
 
     <script src="DOM_EVENT.js"></script>
-    
+
 </body>
+
 </html>
