--- a/JAVASCRIPT LANGUAGE/formValidation.html
+++ b/JAVASCRIPT LANGUAGE/formValidation.html
@@ -15,10 +15,18 @@
         <label for="age">Age</label>
         <input type="text" id="age" placeholder="Enter your age"><br><br>
 
+        <label for="contact">Contact</label>
+        <input type="text" id="contact" placeholder="Enter mobile number"><br><br>
+
+        <label for="email">Email</label>
+        <input type="text" id="email" placeholder="Enter your email"><br><br>
+
         <span id="errorage"></span>
 
     <br><br>
     <input type="submit">
     </form>
+
+    <script src="formValidation.js"></script>
 </body>
 </html>
