--- a/JAVASCRIPT LANGUAGE/formValidation.html
+++ b/JAVASCRIPT LANGUAGE/formValidation.html
@@ -21,6 +21,14 @@
         <label for="email">Email</label>
         <input type="text" id="email" placeholder="Enter your email"><br><br>
 
+        
+        <label for="pass">password</label>
+        <input type="text" id="password" placeholder="Enter your password"><br><br>
+
+        
+        <label for="cpass">Confirm password</label>
+        <input type="text" id="cpassword" placeholder="Enter your Confirm password"><br><br>
+
         <span id="errorage"></span>
 
     <br><br>
