--- a/JAVASCRIPT LANGUAGE/Queryselector.html
+++ b/JAVASCRIPT LANGUAGE/Queryselector.html
@@ -23,6 +23,7 @@
     <h1 class="container">Welcome to Cybrom</h1>
 
     <button id="btn">Click</button>
+    <h2>Js class after long time</h2>
     
     <script src="QueryS.js"></script>
 </body>
