--- a/JAVASCRIPT LANGUAGE/Destructure.html
+++ b/JAVASCRIPT LANGUAGE/Destructure.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="demo"></h1>
+    <h2 id="demo2"></h2>
 
     <script src="ds.js"></script>
 </body>
