--- a/JAVASCRIPT LANGUAGE/object.html
+++ b/JAVASCRIPT LANGUAGE/object.html
@@ -22,6 +22,9 @@
     <label>Enter password</label>
     <input type="text" id="pass" placeholder="Enter pass"> <br>
 
+    <label>Enter Contact</label>
+    <input type="text" id="cont" placeholder="Enter Contact"> <br>
+
     <input type="submit">
 
 
