--- a/JAVASCRIPT LANGUAGE/Task Js.html
+++ b/JAVASCRIPT LANGUAGE/Task Js.html
@@ -12,6 +12,9 @@
     </form>
 
 
+    <img src="ras.jpeg" height="150px" onmouseenter="fun1()">
+    <img src="gul.jpeg" height="150px" onmouseenter="fun2()">
+    <img src="malai.jpeg" height="150px" onmousedown="fun3()">
 
     <script src="Task_js.js"></script>
     
