--- a/JAVASCRIPT LANGUAGE/Task Js.html
+++ b/JAVASCRIPT LANGUAGE/Task Js.html
@@ -12,9 +12,20 @@
     </form>
 
 
-    <img src="ras.jpeg" height="150px" onmouseenter="fun1()">
-    <img src="gul.jpeg" height="150px" onmouseenter="fun2()">
-    <img src="malai.jpeg" height="150px" onmousedown="fun3()">
+    <img src="ras.jpeg" height="150px" onmouseenter="fun1()" >
+    <img src="gul.jpeg" height="150px" onmouseenter="fun2()" >
+    <img src="malai.jpeg" height="150px" onmouseenter="fun3()"> <br><br>
+
+
+    <div>
+        <img src="" height="150px" id="image1">
+    </div> <br> <br>
+
+    <button  onclick="inc()">inc++</button>
+    <button onclick="dec()">dec--</button>
+    <button onclick="res()">reset</button>
+
+    <h1 id="head">0</h1>
 
     <script src="Task_js.js"></script>
     
