--- a/JAVASCRIPT LANGUAGE/nestedobj.html
+++ b/JAVASCRIPT LANGUAGE/nestedobj.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="demo"></h1>
+    <h1 id="demo5"></h1>
 
     <script src="nested_obj.js"></script>
     
