--- a/JAVASCRIPT LANGUAGE/4_feb_Homwork.html
+++ b/JAVASCRIPT LANGUAGE/4_feb_Homwork.html
@@ -7,7 +7,7 @@
 </head>
 <body>
         
- <form action="" onsubmit="return fun(event)">
+ <form action="" onsubmit="return fun()">
 
     
     <label for = "name">Enter name</label>
