--- a/JAVASCRIPT LANGUAGE/4_feb_Homwork.html
+++ b/JAVASCRIPT LANGUAGE/4_feb_Homwork.html
@@ -27,12 +27,15 @@
 
     
     <button type="submit">Submit</button>
-    <button type="button" id = "dis" onclick="display()">Show</button>
+    <!-- <button type="button" id = "dis" onclick="display()">Show</button>
 
- 
+  -->
 
 
  </form>
+ 
+ <button type="button"  onclick="display()">Show</button>
+
  
 
  <script src="Homework.js"></script>
