--- a/JAVASCRIPT LANGUAGE/SetInterval.html
+++ b/JAVASCRIPT LANGUAGE/SetInterval.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
+ <!-- homework  reset button -->
     <h1 id="count">0</h1>
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
