--- a/JAVASCRIPT LANGUAGE/local.html
+++ b/JAVASCRIPT LANGUAGE/local.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">click here</button>
-    <script src="Arrow.js"></script>
+    <script src="local.js"></script>
     
 </body>
 </html>
