--- a/JAVASCRIPT LANGUAGE/SetInterval.html
+++ b/JAVASCRIPT LANGUAGE/SetInterval.html
@@ -10,6 +10,7 @@
     <h1 id="count">0</h1>
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
+    <button onclick="res()">Reset</button>
     <script src="SetInterval.js"></script>
     
 </body>
