--- a/JAVASCRIPT LANGUAGE/setTimeout.html
+++ b/JAVASCRIPT LANGUAGE/setTimeout.html
@@ -13,7 +13,13 @@
 <body>
 <form action="" id="frm">
     <label>Enter your name</label>
-    <input type="text" id="name" placeholder="Enter your name">
+    <input type="text" id="name" placeholder="Enter your name"><br> <br>
+
+    <label>Enter your email</label>
+    <input type="text" id="email" placeholder="Enter your email"> <br> <br>
+
+    <label>Enter your contact</label>
+    <input type="text" id="contact" placeholder="Enter your contact">
 </form>
 
     <script src="setime.js"></script>
