--- a/JAVASCRIPT LANGUAGE/local.html
+++ b/JAVASCRIPT LANGUAGE/local.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
+
+    <form action="" id="form" onsubmit="return fun()">
+        <label>Enter your name</label>
+        <input type="text" id="name" placeholder="Enter your name"><br>
+
+        <label>Enter your mobile number</label>
+        <input type="text" id="cont" placeholder="Enter your mobile number"><br>
+
+        <label>Enter your email</label>
+        <input type="text" id="email" placeholder="Enter your email"><br>
+
+        <label>Enter your city</label>
+        <input type="text" id="city" placeholder="Enter your city"><br>
+
+        <input type="submit">
+
+
+
+
+    </form>
     <script src="local.js"></script>
     
 </body>
