--- a/JAVASCRIPT LANGUAGE/local.html
+++ b/JAVASCRIPT LANGUAGE/local.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form action="" id="form" onsubmit="return fun()">
+    <form action=""  onsubmit="return fun()">
         <label>Enter your name</label>
         <input type="text" id="name" placeholder="Enter your name"><br>
 
