--- a/JAVASCRIPT LANGUAGE/8_task.html
+++ b/JAVASCRIPT LANGUAGE/8_task.html
@@ -9,9 +9,18 @@
     <form action="" id="myform" onsubmit="return fun()">
         <label>ENTER YOUR NAME: </label>
         <input type="text" id="name" placeholder="Enter your name"> <br>
-
+<br>
         <label>ENTER YOUR CONTACT: </label>
-        <input type="text" id="cont" placeholder="Enter your number"> <br>
+        <input type="text" id="cont" placeholder="Enter your number"> <br> <br>
+
+
+        <label>ENTER YOUR EMAIL: </label>
+        <input type="text" id="email" placeholder="Enter your email"> <br>
+<br>
+        <label>ENTER YOUR CITY: </label>
+        <input type="text" id="city" placeholder="Enter your city name"> <br> <br>
+
+
 
         <button type="submit">Submit</button>
         </form>
