--- a/JAVASCRIPT LANGUAGE/Submit.html
+++ b/JAVASCRIPT LANGUAGE/Submit.html
@@ -26,6 +26,8 @@
     <button id="logout">Logout</button>
 
     <script>
+
+document.body.style.backgroundColor = "black";
         // used for retrieve data used key value for access
         let name = localStorage.getItem("username");
         let cont = localStorage.getItem("contact");
