--- a/JAVASCRIPT LANGUAGE/Submit.html
+++ b/JAVASCRIPT LANGUAGE/Submit.html
@@ -23,7 +23,7 @@
     <h2 class="demo"></h2>
     <h2 class="demo"></h2>
     </p>
-    <button id="logout">Logout</button>
+    <button id="logout" onclick="fun()">Logout</button>
 
     <script>
 
@@ -60,10 +60,10 @@ document.body.style.backgroundColor = "black";
 
 
 
-
+            function fun(){
         let log = document.getElementById("logout")
-        log.addEventListener("click", function () {
-            log.classList.add('log_1')
+        log.classList.add('log_1')
+            // log.classList.add('log_1')
             localStorage.removeItem("username")
             let clr = document.getElementsByClassName("demo")
             clr[0].innerHTML = "";
@@ -82,7 +82,7 @@ document.body.style.backgroundColor = "black";
 
 
 
-        });
+        };
     </script>
 </body>
 
