--- a/JAVASCRIPT LANGUAGE/local1.html
+++ b/JAVASCRIPT LANGUAGE/local1.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" onsubmit="multi()">
+    <h1>Sign up </h1>
+    <form action="login.html" onsubmit="multi()">
         <label>ENTER YOUR NAME: </label>
         <input type="text" id="name"> <br><br>
         <label>ENTER YOUR EMAIL: </label>
