--- a/JAVASCRIPT LANGUAGE/login.html
+++ b/JAVASCRIPT LANGUAGE/login.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login page</h1>
+    <h1 id="log">Login page</h1>
     <form action="Home.html" onsubmit="return loginform()">
         <label>Email: </label>
         <input type="text" id="loginemail"> <br> <br>
