--- a/JAVASCRIPT LANGUAGE/Home.html
+++ b/JAVASCRIPT LANGUAGE/Home.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to home page......!</h1>
+    <h1 class="home">Welcome to home page......!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quia aliquid animi reiciendis temporibus, quae ad quam nobis quidem exercitationem sint repellendus tempore culpa iure voluptate ducimus repudiandae maiores provident.lorem
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sint sed aliquam aut at. Mollitia doloribus beatae dolor quae quibusdam fugit quasi sed harum perferendis suscipit? Odio voluptates minus facilis.
     </p>
+    <script src="local1.js"></script>
     
 </body>
 </html>
