--- a/JAVASCRIPT LANGUAGE/Authentication.html
+++ b/JAVASCRIPT LANGUAGE/Authentication.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sign up </h1>
+    <h1 id="sign">Sign up </h1>
     <form action="login.html" onsubmit="multi()">
         <label>ENTER YOUR NAME: </label>
-        <input type="text" id="name"> <br><br>
+        <input type="text" id="name" placeholder="enter your name"> <br><br>
         <label>ENTER YOUR EMAIL: </label>
-        <input type="text" id="email"> <br><br>
+        <input type="text" id="email" placeholder="enter your email"> <br><br>
         <label>ENTER YOUR PASSWORD: </label>
-        <input type="text" id="password"> <br><br>
+        <input type="text" id="password" placeholder="enter your password"> <br><br>
         <input type="submit">
 
     </form>
