--- a/JAVASCRIPT LANGUAGE/data.html
+++ b/JAVASCRIPT LANGUAGE/data.html
@@ -15,6 +15,9 @@
         </thead>
         <tbody id="display"></tbody>
     </table>
+    <div id="showedit">
+        
+    </div>
 
     <script src="data.js"></script>
 
