--- a/JAVASCRIPT LANGUAGE/animation.html
+++ b/JAVASCRIPT LANGUAGE/animation.html
@@ -31,6 +31,14 @@
         <div class="ch1" data-aos="zoom-out-right"></div>
         <div class="ch2"></div>
     </section>
+    <section class="main">
+        <div class="ch1" data-aos="zoom-in-up"></div>
+        <div class="ch2"></div>
+    </section>
+    <section class="main">
+        <div class="ch1" ></div>
+        <div class="ch2" data-aos="zoom-in"></div>
+    </section>
     <script src="slider.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
