--- a/JAVASCRIPT LANGUAGE/animation.html
+++ b/JAVASCRIPT LANGUAGE/animation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="animation.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -39,7 +39,7 @@
         <div class="ch1" ></div>
         <div class="ch2" data-aos="zoom-in"></div>
     </section>
-    <script src="slider.js"></script>
+    <script src="animation.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
