--- a/JAVASCRIPT LANGUAGE/indexx.html
+++ b/JAVASCRIPT LANGUAGE/indexx.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="data.html" onsubmit="insertdata()">
+    <form action="database.html" onsubmit="insertdata()">
         <label for="">Name</label>
         <input type="text" id="name" placeholder="Enter name"><br><br>
 
@@ -25,6 +25,6 @@
     </form>
 
 
-    <script src="data.js"></script>
+    <script src="database.js"></script>
 </body>
 </html>
