--- a/JAVASCRIPT LANGUAGE/DOM_EVENT.html
+++ b/JAVASCRIPT LANGUAGE/DOM_EVENT.html
@@ -18,10 +18,14 @@
     <h1 id="head">Welcome to js class</h1>
 
     <button onclick="fun()">On Click here</button>
+    <br>
     <button ondblclick="fun()">Double click</button>
+    <br>
     <button onmouseenter="fun()">Mouse enter</button>
+    <br>
     <button onmouseleave="fun()">Leave Mouse</button>
     <button oncontextmenu="fun()">Right click</button>
+    <button onmouseover="fun()">on Mouse</button>
 
     <script src="DOM_EVENT.js"></script>
 
