--- a/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .img1 {
+            float:left;
+            padding: 12px;
+            width: 100px;
+            height: 75px;
+            
+
+        }
+
+        .img2{
+
+        }
+    </style>
 </head>
 <body>
+
+
+    <section>
+        <header>
+            <h1>Horizontail Image Aligning</h1>
+        </header>
+
+        <p><img src="fl1.jpeg" class="img1" alt="Flower 1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui laboriosam pariatur totam optio laudantium incidunt ad possimus aspernatur quaerat a repellat, ex labore quos et ipsum! In, quidem recusandae?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic iure voluptatem doloribus quae amet facilis cum, quo iste quam corrupti ullam, et deleniti rerum iusto libero nesciunt. Repellat, odio deserunt!</p>
+        <p><img src="fl2.jpeg"></p>
+    </section>
     
 </body>
 </html>
