--- a/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
@@ -16,6 +16,10 @@
         }
 
         .img2{
+            float: right;
+            padding: 12px;
+            width: 100px;
+            height: 80px;
 
         }
     </style>
@@ -28,9 +32,9 @@
             <h1>Horizontail Image Aligning</h1>
         </header>
 
-        <p><img src="fl1.jpeg" class="img1" alt="Flower 1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui laboriosam pariatur totam optio laudantium incidunt ad possimus aspernatur quaerat a repellat, ex labore quos et ipsum! In, quidem recusandae?
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic iure voluptatem doloribus quae amet facilis cum, quo iste quam corrupti ullam, et deleniti rerum iusto libero nesciunt. Repellat, odio deserunt!</p>
-        <p><img src="fl2.jpeg"></p>
+        <p><img src="fl1.jpeg" class="img1" alt="Flower 1"><strong>Sunflower</strong> dolor sit amet consectetur adipisicing elit. Quae qui laboriosam pariatur totam optio laudantium incidunt ad possimus aspernatur quaerat a repellat, ex labore quos et ipsum! In, quidem recusandae?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic iure voluptatem doloribus quae amet facilis cum, quo iste quam corrupti ullam, et deleniti rerum iusto libero nesciunt. Repellat, odio deserunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ipsa aliquam voluptates totam eos dolores debitis necessitatibus, rem exercitationem ipsum maxime consequatur voluptate repudiandae dolor in eum similique aut? Doloremque!</p>
+        <p><img src="fl2.jpeg" class="img2" alt="Flower 2"><strong>Rose</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ullam illum ex id vitae, iusto sapiente beatae quae libero reprehenderit ipsum ducimus distinctio quam, veritatis quisquam? Ipsa quasi reprehenderit dignissimos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores expedita veniam quibusdam odit commodi nam suscipit laudantium minus libero veritatis? In, ducimus dignissimos accusamus placeat recusandae sunt maxime. Unde, enim. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam laboriosam ea tenetur dolorum deserunt! Nesciunt dolores alias similique voluptate cupiditate corporis, rem maxime incidunt, beatae delectus ex nostrum, excepturi odit!</p>
     </section>
     
 </body>
