--- a/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/AligningImage..html
@@ -7,10 +7,11 @@
 
     <style>
         .img1 {
-            float:left;
+            
             padding: 12px;
             width: 100px;
             height: 75px;
+            vertical-align: baseline;
             
 
         }
@@ -20,6 +21,7 @@
             padding: 12px;
             width: 100px;
             height: 80px;
+            vertical-align:middle;
 
         }
     </style>
@@ -29,7 +31,7 @@
 
     <section>
         <header>
-            <h1>Horizontail Image Aligning</h1>
+            <h1>Horizontal Image Aligning</h1>
         </header>
 
         <p><img src="fl1.jpeg" class="img1" alt="Flower 1"><strong>Sunflower</strong> dolor sit amet consectetur adipisicing elit. Quae qui laboriosam pariatur totam optio laudantium incidunt ad possimus aspernatur quaerat a repellat, ex labore quos et ipsum! In, quidem recusandae?
