--- a/HTML , CSS AND JAVASCRIPT REVISION/Videotag.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Videotag.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+    video{
+        width: 50%;
+        height: auto;
+        float: left;
+        padding: 1rem;
+    }
+</style>
 </head>
 <body>
 
     <h1>L.G Website Video</h1>
-    <video controls>
-        <source src="lgweb.mp4" type="lgweb">
+    <video controls autoplay loop muted preload="auto" poster="fl1.jpeg">
+        <source src="lgweb.mp4" type="video/mp4">
         <p>Your browser does not supprt Html5 video</p>
 
     </video>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus modi nulla provident voluptatum corporis omnis fugiat, beatae, excepturi quibusdam at quae amet et iste quam cumque voluptatem, consequatur odit quasi!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, non eligendi itaque incidunt totam modi, molestias facere voluptatum assumenda, dolorum maiores asperiores repellat? Delectus sequi, voluptate tempore nemo provident neque!</p>
     
 </body>
 </html>
