--- a/HTML , CSS AND JAVASCRIPT REVISION/Videotag.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Videotag.html
@@ -23,6 +23,7 @@
     </video>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus modi nulla provident voluptatum corporis omnis fugiat, beatae, excepturi quibusdam at quae amet et iste quam cumque voluptatem, consequatur odit quasi!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, non eligendi itaque incidunt totam modi, molestias facere voluptatum assumenda, dolorum maiores asperiores repellat? Delectus sequi, voluptate tempore nemo provident neque!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel necessitatibus distinctio quo officia voluptas quasi totam ratione cupiditate perferendis nemo doloremque obcaecati, reiciendis dolores. Ratione minima excepturi dolorem in at? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, dicta saepe est reprehenderit quam excepturi cumque et sequi facere, voluptate esse magni harum rerum consequuntur quidem, veniam nam! Repellat, perspiciatis!</p>
     
 </body>
 </html>
