--- a/HTML , CSS AND JAVASCRIPT REVISION/SpecialChar.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/SpecialChar.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        section{
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
 
     <section>
         Q: What should you do when a British banker picks a fight with you?<br>
-        A: &pound; some &cent;&cent; into him.
+     <em>  A: &pound; some &cent;&cent; into him.</em> 
     </section>
     
 </body>
