--- a/HTML , CSS AND JAVASCRIPT REVISION/SpecialChar.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/SpecialChar.html
@@ -7,6 +7,7 @@
     <style>
         section{
             font-size: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -16,6 +17,14 @@
         Q: What should you do when a British banker picks a fight with you?<br>
      <em>  A: &pound; some &cent;&cent; into him.</em> 
     </section>
+
+    <section>
+        Q: What do you call it when a judge takes part of a law off the books?<br>
+        <em>A: &sect; violence , Divide -> &divide; , multiplication -> &times; , 10 -> 10&sup2;</em>
+
+    </section>
+
+
     
 </body>
 </html>
