--- a/Table.html
+++ b/Table.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>LESSON OF TABLE</h1>
     <h1>TABLE DATA IN HTML</h1>
     <table border="20px">
         <tr>
