--- a/Table.html
+++ b/Table.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>LESSON OF TABLE</h1>
+    <h1>All TAble TAg</h1>
     <h1>TABLE DATA IN HTML</h1>
     <table border="20px">
         <tr>
