--- a/Hllo.html
+++ b/Hllo.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+
+    </style>
 </head>
 <body>
 
     <h1>Practising  of Radial Gradient on Two differnet elements</h1>
 
-
-    
-    
-
-
+    <div class = "container">
+        <div class="grad one"></div>
+        <div class="grad two"></div>
+    </div>
 
 
 </body>
