--- a/Hllo.html
+++ b/Hllo.html
@@ -7,6 +7,48 @@
 
     <style>
 
+        h1{
+            text-align: center;
+            color: red;
+        }
+
+        .container{
+            width: 450px;
+            margin: 0 auto;
+
+        }
+        .grad {
+            background-image: radial-gradient(
+                orange,
+                white
+            );
+            border-radius: solid 1px black;
+            margin: 1rem;
+            float: left;
+        }
+        .one{
+            width: 30rem;
+            height: 30rem;
+            
+        }
+        .two{
+            width: 30rem;
+            height: 30rem;
+            background-image: radial-gradient(
+                at bottom right,
+                rgb(0, 30, 255),
+                rgb(220, 178, 178)
+            );
+        }
+        .head{
+            color: blue;
+            font-weight: bold;
+        }
+label{
+    padding: 20px;
+}
+
+
 
     </style>
 </head>
@@ -14,9 +56,18 @@
 
     <h1>Practising  of Radial Gradient on Two differnet elements</h1>
 
-    <div class = "container">
-        <div class="grad one"></div>
-        <div class="grad two"></div>
+    <div class= "container">
+        <div class="grad one">
+            <h1 class="head">Form validation</h1>
+            <label>ENTER YOUR NAME : </label>
+            <input type="text" id = "name" placeholder="Enter YOur name"> <br><br>
+            <button>Submit</button>
+
+            
+        </div>
+        <div class="grad two">
+            <h2>At bottom right radient </h2>
+        </div>
     </div>
 
 
