--- a/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div id="d1">DIV #1</div>
+    <div id="d2">DIV #2</div>
+    <div id="d3">DIV #3</div>
     
 </body>
 </html>
