--- a/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
@@ -8,6 +8,12 @@
         body{
             margin: 0px;
         }
+        div{
+            width: 250px;
+            height: 100px;
+            border: 5px solid #000000;
+            background-color: red;
+        }
     </style>
 </head>
 <body>
