--- a/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
@@ -12,7 +12,19 @@
             width: 250px;
             height: 100px;
             border: 5px solid #000000;
-            background-color: red;
+        
+        }
+        div#d1{
+            background-color: blue;
+            float: left;
+        }
+        div#d2{
+            background-color: green;
+            float: left;
+        }
+        div#d3{
+            background-color: blueviolet;
+            float: left;
         }
     </style>
 </head>
