--- a/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/floatProperty.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            margin: 0px;
-        }
+    
         div{
             width: 250px;
             height: 100px;
@@ -26,6 +24,12 @@
             background-color: blueviolet;
             float: left;
         }
+        .container{
+            display: flex;
+            width: 300px;
+            height: 200px;
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
@@ -33,6 +37,11 @@
     <div id="d1">DIV #1</div>
     <div id="d2">DIV #2</div>
     <div id="d3">DIV #3</div>
+    <div class="container">
+        <div class="box1">box 1</div>
+        <div class="box2">box 2</div>
+        <div class="box3">box 3</div>
+    </div>
     
 </body>
 </html>
