--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -9,6 +9,8 @@
 
     <div id="d1" > Div one</div>
     <div id="d2"> Div two</div>
+    <div id="d3"> Div three</div>
+    <div id="d4"> Div four</div>
     
 </body>
 </html>
