--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div {
+            position: absolute;
+            width: 250px;
+            height: 100px;
+            border: 5px solid #000;
+            color: black;
+
+        }
+    </style>
 </head>
 <body>
 
