--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        h1{
+            text-align: center;
+        }
         div {
             position: absolute;
             width: 250px;
             height: 100px;
             border: 5px solid #000;
             color: black;
+            font-weight: bold;
+
 
         }
     </style>
 </head>
 <body>
-
+<h1>ABSOLUTE PROPERTY</h1>
     <div id="d1" > Div one</div>
     <div id="d2"> Div two</div>
     <div id="d3"> Div three</div>
