--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -15,6 +15,7 @@
             border: 5px solid #000;
             color: black;
             font-weight: bold;
+            text-align: center;
 
 
         }
