--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -7,6 +7,8 @@
     <style>
         h1{
             text-align: center;
+            
+            margin-top: 200px;
         }
         div {
             position: absolute;
@@ -18,6 +20,27 @@
             text-align: center;
 
 
+        }
+        div#d1{
+            background-color: red;
+            left: 0px;
+            top: 0px;
+
+        }
+        div#d2{
+            background-color: green;
+        left: 75px;
+        top: 25px;
+        }
+        div#d3{
+            background-color: blue;
+            left: 150px;
+            top: 50px;
+        }
+        div#d4{
+            background-color: yellow;
+            left: 225px;
+            top: 75px;
         }
     </style>
 </head>
