--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -46,6 +46,7 @@
 </head>
 <body>
 <h1>ABSOLUTE PROPERTY</h1>
+<h2>RELATIVE PROPERTY</h2>
     <div id="d1" > Div one</div>
     <div id="d2"> Div two</div>
     <div id="d3"> Div three</div>
