--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -44,7 +44,8 @@
         }
         div#d5{
             background-color: blanchedalmond;
-            left: 275;
+            left: 275px;
+            top: 100px;
         }
     </style>
 </head>
