--- a/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/Absoluteproperty.html
@@ -47,6 +47,11 @@
             left: 275px;
             top: 100px;
         }
+        div#d6{
+            background-color: magenta;
+            left: 300px;
+            top: 100px;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +64,7 @@
     <div id="d3"> Div three</div>
     <div id="d4"> Div four</div>
     <div id="d5"> Div Five</div>
+    <div id="d6"> Div Six</div>
     
 </body>
 </html>
