--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1> A Responsive column Layout without media queries</h1>
     
 </body>
 </html>
