--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -8,6 +8,11 @@
 <body>
 
     <h1> A Responsive column Layout without media queries</h1>
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quis ut! Eligendi nemo beatae, suscipit laudantium quos nulla provident dolores iure, ipsa atque ipsam amet earum repellat, sint ab. Facere?
+            <p>...additional content here</p>
+        </p>
+    </article>
     
 </body>
 </html>
