--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -17,6 +17,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quis ut! Eligendi nemo beatae, suscipit laudantium quos nulla provident dolores iure, ipsa atque ipsam amet earum repellat, sint ab. Facere?
             <p>...additional content here</p>
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error officiis et harum reiciendis, vero ipsa. Dolorem iusto officia quidem hic alias, consequuntur ab odit? Voluptatem earum corporis accusantium ea dolor.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, impedit cum reiciendis ea facere a facilis natus quidem. Obcaecati facere blanditiis quam facilis laboriosam velit quo magni voluptate sint dicta?
+            
+        </p>
     </article>
     
 </body>
