--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -13,6 +13,7 @@
 <body>
 
     <h1> A Responsive column Layout without media queries</h1>
+    <h2>Closure property and relative property</h2>
     <article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quis ut! Eligendi nemo beatae, suscipit laudantium quos nulla provident dolores iure, ipsa atque ipsam amet earum repellat, sint ab. Facere?
             <p>...additional content here</p>
@@ -23,7 +24,7 @@
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur id animi sapiente aliquam labore veniam iusto voluptate quia, doloribus minima ducimus, asperiores a praesentium, nihil laborum quos dolorem corporis itaque!
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis cum quae quos labore repellendus ipsum voluptate hic? Iure earum eos possimus eum cupiditate voluptas necessitatibus ut, veritatis vitae quisquam aperiam?
-            
+
         </p>
     </article>
     
