--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -12,6 +12,16 @@
 </head>
 <body>
 
+    <h1>NAVIGATION BAR</h1>
+    <div class="navbar">
+        <h1>LOGO</h1>
+        <ul>
+            <li>HOME</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+
     <h1> A Responsive column Layout without media queries</h1>
     <h2>Closure property and relative property</h2>
     <article>
@@ -27,6 +37,7 @@
 
         </p>
     </article>
+
     
 </body>
 </html>
