--- a/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
+++ b/HTML , CSS AND JAVASCRIPT REVISION/responsivelayout.html
@@ -20,6 +20,10 @@
             justify-content: space-around;
             
         }
+        .navbar h1{
+            /* padding-right: 500px; */
+            margin-right: 400px;
+        }
 ul{
     display: flex;
 
