--- a/JAVASCRIPT LANGUAGE/operator.html
+++ b/JAVASCRIPT LANGUAGE/operator.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+        h1{
+            color: red;
+            margin: 10px;
+        }
+
+
+
+
+    </style>
 </head>
 <body>
 
