--- a/JAVASCRIPT LANGUAGE/operator.html
+++ b/JAVASCRIPT LANGUAGE/operator.html
@@ -20,6 +20,8 @@
 
 <h1 align="center">FIND THE AREA OF CRICLE</h1>
     <script src="opertor.js"></script>
+
+<h2>Function in java Script</script></h2>
     
 </body>
 </html>
