--- a/JAVASCRIPT LANGUAGE/operator.html
+++ b/JAVASCRIPT LANGUAGE/operator.html
@@ -22,6 +22,11 @@
     <script src="opertor.js"></script>
 
 <h2>Function in java Script</script></h2>
+<div class="contant2">
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae quia quam non dicta consequuntur ab fugiat molestiae, nostrum, ex placeat voluptate! Perferendis libero fuga similique, laborum iure dicta aut voluptatibus.
+        
+    </P>
+</div>
     
 </body>
 </html>
