--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -6,7 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+        <h1 class="title">Welcome to DOM</h1>
+        <p class="text">First paragraph</p>
+        <p class="text">Second paragraph</p>
+
+        <ul id="list">
+            <li>Item 1</li>
+            <it>Item 2</it>
+            <li>Item 3</li>
+        </ul>
+
+        <button id="myButton">Click me</button>
+    </div>
+
     
 </body>
 </html>
