--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="container">
-        <h1 class="title">Welcome to DOM</h1>
+        <h1 class="title">Welcome to DOM(Dcoument Object Model)</h1>
         <p class="text">First paragraph</p>
         <p class="text">Second paragraph</p>
 
