--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -9,9 +9,19 @@
             text-align: center;
             color: red;
         }
+        #list{
+            color: blueviolet;
+        }
+
+    #myButton{
+        padding: 10px;
+
+    }
     </style>
 </head>
 <body>
+
+    
     <div id="container">
         <h1 class="title">Welcome to DOM(Dcoument Object Model)</h1>
         <p class="text">First paragraph</p>
