--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -15,6 +15,9 @@
 
     #myButton{
         padding: 10px;
+        font-weight: bold;
+        background-color: green;
+        color: white;
 
     }
     </style>
