--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -18,6 +18,9 @@
         font-weight: bold;
         background-color: green;
         color: white;
+        border-radius: 30px solid
+        black;
+        border: none;
 
     }
     </style>
