--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -42,6 +42,8 @@
         <button id="myButton">Click me</button>
     </div>
 
+    <div id="box"></div>
+
 
     <script src="DomEx.js"></script>
 
