--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -32,6 +32,7 @@
         <h1 class="title">Welcome to DOM(Dcoument Object Model)</h1>
         <p class="text">First paragraph</p>
         <p class="text">Second paragraph</p>
+        <p class="text">Third paragraph</p>"
 
         <ul id="list">
             <li>Item 1</li>
