--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -35,6 +35,7 @@
         <p class="text">Third paragraph</p>
         <p class="text">Fourth Paragraph</p>
         <p class="text">Third paragraph</p>
+        <p class="text">Sixth paragrpah</p>
 
         <ul id="list">
             <li>Item 1</li>
