--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -42,6 +42,9 @@
             <it>Item 2</it>
             <li>Item 3</li>
         </ul>
+        <ul>
+            <li>Items a</li>
+        </ul>
 
         <button id="myButton">Click me</button>
     </div>
