--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -44,6 +44,7 @@
         </ul>
         <ul>
             <li>Items a</li>
+            <li>Items b</li>
         </ul>
 
         <button id="myButton">Click me</button>
