--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -36,11 +36,14 @@
         <p class="text">Fourth Paragraph</p>
         <p class="text">Third paragraph</p>
         <p class="text">Sixth paragrpah</p>
+        <h3>Hello mohit</h3>
 
         <ul id="list">
             <li>Item 1</li>
             <it>Item 2</it>
             <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
         </ul>
         <ul>
             <li>Items a</li>
