--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -49,6 +49,12 @@
             <li>Items a</li>
             <li>Items b</li>
         </ul>
+        <ul id="list1">
+
+            <li>Item c</li>
+            <li>Item d</li>
+            <li>Item e</li>
+        </ul>
 
         <button id="myButton">Click me</button>
     </div>
