--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -37,6 +37,7 @@
         <p class="text">Third paragraph</p>
         <p class="text">Sixth paragrpah</p>
         <h3>Hello mohit</h3>
+        <h4>Nothing to worry that </h4>
 
         <ul id="list">
             <li>Item 1</li>
