--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -36,8 +36,7 @@
         <p class="text">Fourth Paragraph</p>
         <p class="text">Third paragraph</p>
         <p class="text">Sixth paragrpah</p>
-        <h3>Hello mohit</h3>
-        <h4>Nothing to worry that </h4>
+       
 
         <ul id="list">
             <li>Item 1</li>
@@ -56,6 +55,10 @@
             <li>Item d</li>
             <li>Item e</li>
         </ul>
+        <ol id="list2">
+            <li>Item f</li>
+            <li>Item g</li>
+        </ol>
 
         <button id="myButton">Click me</button>
     </div>
