--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -58,6 +58,7 @@
         <ol id="list2">
             <li>Item f</li>
             <li>Item g</li>
+            <li>Item h</li>
         </ol>
 
         <button id="myButton">Click me</button>
