--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -59,6 +59,7 @@
             <li>Item f</li>
             <li>Item g</li>
             <li>Item h</li>
+            <li>Item i</li>
         </ol>
 
         <button id="myButton">Click me</button>
