--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -83,7 +83,19 @@
 </head>
 <body>
     
+<div id="container">
+    <h1 class="title">Hello world</h1>
+    <p class="content">This is a paragraph</p>
+    <button id="myButton">Click me</button>
 
-    
+    <ul id="list">
+    <li>Item 1</li>
+    <li>Item 2</li>
+</ul>
+
+</div>
+
+
+
 </body>
 </html>
