--- a/JAVASCRIPT LANGUAGE/Formhandling.html
+++ b/JAVASCRIPT LANGUAGE/Formhandling.html
@@ -9,10 +9,11 @@
     <h1>FORM HANDLING IN JAVASCRIPT</h1>
     <form>
 
-        
+
 
 
 
     </form>
+    <script src="Formhandling.js"></script>
 </body>
 </html>
