--- a/JAVASCRIPT LANGUAGE/Formhandling.html
+++ b/JAVASCRIPT LANGUAGE/Formhandling.html
@@ -11,6 +11,10 @@
         form{
             text-align: center;
         }
+
+        .input{
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
