--- a/JAVASCRIPT LANGUAGE/Formhandling.html
+++ b/JAVASCRIPT LANGUAGE/Formhandling.html
@@ -12,18 +12,18 @@
             text-align: center;
         }
 
-        .input{
-            margin: 20px;
-        }
+        
     </style>
 </head>
 <body>
     <h1>FORM HANDLING IN JAVASCRIPT</h1>
-    <form>
+    <form onsubmit="return false">
 
 
 
-
+<input type = "text" id = "name" placeholder = "Enter your name" required><br>
+<input type = "email" id = "email" placeholder = "Enter your email" required>
+<button type = "submit">Submit</button>
 
     </form>
     <script src="Formhandling.js"></script>
