--- a/JAVASCRIPT LANGUAGE/Formhandling.html
+++ b/JAVASCRIPT LANGUAGE/Formhandling.html
@@ -11,7 +11,15 @@
         form{
             text-align: center;
         }
+input{
+    margin: 15px;
+    padding: 8px;
+}
 
+input::placeholder{
+    color: red;
+    text-align: center;
+}
         
     </style>
 </head>
@@ -23,6 +31,7 @@
 
 <input type = "text" id = "name" placeholder = "Enter your name" required><br>
 <input type = "email" id = "email" placeholder = "Enter your email" required>
+<input
 <button type = "submit">Submit</button>
 
     </form>
