--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -74,7 +74,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -98,5 +98,27 @@
 
 
 
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <h1>DOM MANIPULATION</h1>
+    <div class="container">
+        <h1 id="main-heading">Hello World</h1>
+        <button id="change-text">Change Text</button>
+        <button id="add-element">Add Element</button>
+        <div id="content"></div>
+    </div>
+    
 </body>
 </html>
