--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -119,6 +119,8 @@
         <button id="add-element">Add Element</button>
         <div id="content"></div>
     </div>
+
+    <script src="DomEx.js"></script>
     
 </body>
 </html>
