--- a/JAVASCRIPT LANGUAGE/DomExample1.html
+++ b/JAVASCRIPT LANGUAGE/DomExample1.html
@@ -114,6 +114,8 @@
         .container{
             min-width: 800px;
             margin: 50px auto;
+            text-align: center;
+            padding: 20px;
         }
     </style>
 </head>
