--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            min-width: 800px;
+            margin: 50px auto;
+            text-align: center;
+            padding: 20px;
+
+
+        }
+
+        button{
+            padding: 10px 20px;
+            margin: 10px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        
+    </style>
 </head>
 <body>
     <h1>DOM(Document object model) MANIPULATION</h1>
