--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -23,6 +23,10 @@
             border-radius: 5px;
         }
         
+        button:hover{
+            background: #0056b3;
+            color: white;
+        }
     </style>
 </head>
 <body>
