--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -18,7 +18,7 @@
             padding: 10px 20px;
             margin: 10px;
             background: #007bff;
-            color: white;
+         color: aquamarine;
             border: none;
             border-radius: 5px;
         }
