--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -37,7 +37,9 @@
         <button id="change-text">Change Text</button>
         <button id="add-element">Add Element</button>
         
-        <div id="content"></div>
+        <div id="content">
+            Welcome to Dom manipulaton
+        </div>
     </div>
     
 
