--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -25,7 +25,7 @@
         
         button:hover{
             background: #0056b3;
-            color: white;
+            color: black;
         }
     </style>
 </head>
