--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -26,6 +26,7 @@
         button:hover{
             background: #0056b3;
             color: black;
+            margin: 10px 20px;
         }
     </style>
 </head>
