--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -27,6 +27,7 @@
             background: #0056b3;
             color: black;
             margin: 10px 20px;
+            border-radius: 10px solid black;
         }
     </style>
 </head>
