--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -28,6 +28,7 @@
             color: black;
             margin: 10px 20px;
             border-radius: 10px solid black;
+            border: none;
         }
     </style>
 </head>
