--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -39,6 +39,7 @@
         <h2 id="main-heading">Hello Mohit!</h2>
         <button id="change-text">Change Text</button>
         <button id="add-element">Add Element</button>
+        <button id = "remove-element">Remove Element</button>
         
         <div id="content">
             Welcome to Dom manipulaton
