--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -40,6 +40,7 @@
         <button id="change-text">Change Text</button>
         <button id="add-element">Add Element</button>
         <button id = "remove-element">Remove Element</button>
+        <button id="change-element">Change Element</button>
         
         <div id="content">
             Welcome to Dom manipulaton
