--- a/JAVASCRIPT LANGUAGE/DomEx2.html
+++ b/JAVASCRIPT LANGUAGE/DomEx2.html
@@ -40,6 +40,7 @@
         <button id="change-text">Change Text</button>
         <button id="add-element">Add Element</button>
         <button id="kl">create Element</button>
+        <h2>Hello welocome to bhopal</h2>
     
         
         <div id="content">
